make h1 bigger on smaller screens and fix carousel height

--- a/src/style.css
+++ b/src/style.css
@@ -133,7 +133,7 @@ button {
   border-radius: 26px;
   text-align: left;
   padding: 48px 24px 0;
-  min-height: 90vh;
+  min-height: 100%;
   margin: auto 10px;
 }
 
@@ -442,7 +442,7 @@ button {
     font-size: 1rem;
   }
   .hero-section h1 {
-    font-size: 1.8rem;
+    font-size: 1.95rem;
   }
   .hero-section .hero-image-container p {
     font-size: 1rem;
